# maxima-clone

./: .gitignore  .travis.yml  ChangeLog  Makefile.am  README  README-lisps.md  README.md  common-html.mk  common-info.mk  configure.ac  doc-Makefile-am.patch  maxima-local.in  maxima.spec.in
archive/doc/: None.texi
changelogs/: ChangeLog-5.48.md  ChangeLog-5.49.md
crosscompile-windows/: CMakeLists.txt  Makefile.am  README.txt  licenses.html  lispselector.tcl  nightlybuild.sh  nightlytest.sh  sbcl.sh  wine-clisp.sh.tmpl  wine-ecl.sh.tmpl
crosscompile-windows/clisp/: CMakeLists.txt
crosscompile-windows/ecl/: CMakeLists.txt  asdf.lisp  ecl-lisp-build.sh.tmpl  strm_os.d
crosscompile-windows/gmplib/: CMakeLists.txt
crosscompile-windows/gnuplot/: CMakeLists.txt
crosscompile-windows/sbcl/: CMakeLists.txt
crosscompile-windows/tcltk/: CMakeLists.txt
crosscompile-windows/texinfo/: CMakeLists.txt
crosscompile-windows/wine/: CMakeLists.txt
crosscompile-windows/winlibs/: CMakeLists.txt
crosscompile-windows/wxmaxima/: CMakeLists.txt
crosscompile-windows/wxwidgets/: CMakeLists.txt
demo/: at_difference.demo  manual.demo
doc/byexample/: mbe10fltrans.tex  mbe11fft.tex  mbe1intro.tex  mbe2plotfit.tex  mbe3ode1.tex  mbe4solve.tex  mbe5qdraw.tex  mbe6calc1.tex  mbe7sint.tex  mbe9bfloat.tex
doc/info/: .gitignore  Arrays.texi  Atensor.texi  Bugs.texi  Command.texi  Constants.texi.m4  Ctensor.texi  Database.texi  Differential.texi  Differentiation.texi  Elliptic.texi.m4  Equations.texi  Expressions.texi  Function.texi  Groups.texi  Help.texi  Input.texi  Integration.texi.m4  Introduction.texi  Itensor.texi  Lists.texi  Makefile.am  MathFunctions.texi.m4  Matrices.texi.m4  Number.texi  Numerical.texi  Numerical.texi.m4  Operators.texi  Plotting.texi  Polynomials.texi  Program.texi  README  Rules.texi  Runtime.texi  Series.texi  Simplification.texi  Special.texi.m4  bitwise.texi  build-html-index.lisp  build_html.sh.in  (+42 more)
doc/info/de/: Function.de.texi  Input.de.texi  Makefile.am  Polynomials.de.texi  Simplification.de.texi
doc/info/es/: Introduction.es.texi  Makefile.am  Numerical.es.texi  Plotting.es.texi  graphs.texi  include-maxima.texi.in  orthopoly.texi
doc/info/figures/: Makefile.am  README  introduction1.mac  introduction3.mac  plotrk.mac  plotrk2.mac  plotting12.mac  wrstcse_ewc_2.mac  wrstcse_ewc_3.mac  wrstcse_montecarlo.mac
doc/info/ja/: Makefile.am
doc/info/pt/: Makefile.am  Plotting.texi  include-maxima.texi.in
doc/info/pt_BR/: Makefile.am
doc/info/ru/: Makefile.am
doc/man/: maxima.1.in
doc/man/de/: maxima.1.in
doc/man/ru/: maxima.1.in
interfaces/emacs/imaxima/: Makefile.am
interfaces/xmaxima/: ChangeLog.txt  Makefile.am  Readme.txt  demos.html  examples.html  intro.html  plotmaxima.html  primer.html  xmaxima-trailer.tcl
lisp-utils/: defsystem.lisp
share/affine/: affine.lisp  dim4-help.lisp
share/amatrix/: rtest_wilcoxon.mac  wilcoxon.mac
share/cobyla/: load-bf-cobyla.lisp  load-cobyla.lisp
share/colnew/: load-colnew.lisp  prob3.mac
share/combinatorics/: combinatorics.lisp  rtest_combinatorics.mac
share/contrib/: rk_adaptive.mac  rtest_rk_adaptive.mac  rtest_wrstcse.mac  wrstcse.mac
share/contrib/lurkmathml/: Makefile.am  README.md  example.mac  mathml.lisp  mathmltest  mathmltest.mac  mathmltest.sh
share/contrib/lurkmathml/doc/: Makefile.am  mathml.texi
share/descriptive/: descriptive.mac  rtest_descriptive.mac
share/diffequations/: drawdf.mac
share/distrib/: distrib.mac
share/draw/: draw.lisp  gnuplot.lisp  grcommon.lisp  rtest_draw.mac
share/dynamics/: plotdf.lisp
share/fftpack5/: load-fftpack5.lisp
share/graphs/: load-graphs.lisp
share/hompack/: load-hompack.lisp
share/integration/: rtest_antid.mac
share/lapack/: lapack.asd  load-lapack.lisp
share/linearalgebra/: linalg-extra.lisp  load-linearalgebra-lisp-files.lisp  matrixexp.lisp  mring.lisp  rtest_matrixexp.mac
share/list_operations/: accumulate.mac  list_operations.mac  rtest_accumulate.mac  rtest_list_operations.mac
share/minpack/: load-minpack.lisp  minpack-interface.lisp
share/nelder_mead/: load-neldermead.lisp  nelder_mead.system  neldermead.asd  neldermead.lisp  nm-maxima.lisp
share/numeric/: decfp-core.lisp  decfp.lisp  fft.lisp  rtest_decfp.mac
share/numericalio/: load-numericalio.lisp  numericalio.lisp  rtest_numericalio.mac
share/odepack/: load-dlsode.lisp  load-odepack.lisp  maxima-dlsode.asd
share/orthopoly/: orthopoly.lisp  rtest_orthopoly.mac
share/solve_rec/: rtest_simplify_sum.mac
share/stringproc/: md5.lisp  sha1.lisp  stringproc.lisp  unicode-sniffer.lisp
share/sym/: compile.lisp
share/tensor/: ctensor.mac  einhil.dem  isimplify.mac  itensor.lisp  tentex.lisp  weyl.dem
share/to_poly_solve/: rtest_to_poly_solve.mac
share/trigonometry/: trigrat.lisp
src/: Makefile.am  airy.lisp  algfac.lisp  asum.lisp  bessel.lisp  clmacs.lisp  combin.lisp  comm.lisp  comm2.lisp  commac.lisp  command-line.lisp  compar.lisp  conjugate.lisp  cpoly.lisp  csimp.lisp  csimp2.lisp  db.lisp  defint.lisp  defmfun-check.lisp  displa.lisp  dskfn.lisp  ecl-port.lisp  ellipt.lisp  errset.lisp  expintegral.lisp  factor.lisp  fcall.lisp  float-format.lisp  float-properties.lisp  float.lisp  gamma.lisp  geomview_def.lisp  globals.lisp  gnuplot_def.lisp  grind.lisp  hayat.lisp  hstep.lisp  hyp.lisp  hypergeometric.lisp  hypgeo.lisp  (+77 more)
src/numerical/: f2cl-lib-package.lisp  f2cl-lib.lisp
tests/: Makefile.am  rtest10.mac  rtest13.mac  rtest13s.mac  rtest14.mac  rtest15.mac  rtest16.mac  rtest1a.mac  rtest2.mac  rtest3.mac  rtest5.mac  rtest6.mac  rtest6a.mac  rtest7.mac  rtest9.mac  rtest9a.mac  rtest_allnummod.mac  rtest_ask1.mac  rtest_atan2.mac  rtest_elliptic.mac  rtest_expintegral.mac  rtest_gamma.mac  rtest_great.mac  rtest_great_slow.mac  rtest_hg.mac  rtest_hstep.mac  rtest_hypgeo.mac  rtest_integrate.mac  rtest_laplace.mac  rtest_limit.mac  rtest_limit_extra.mac  rtest_limit_gruntz.mac  rtest_log.mac  rtest_plot.mac  rtest_plotoptions.mac  rtest_powerseries.mac  rtest_sign.mac  rtest_signum.mac  rtest_sinc.mac  rtest_sqrt.mac  (+12 more)
(+73 files in other folders)
