MAKEINFOFLAGS = --enable-encoding -I . -I .. -I ../.. $(srcdir)/..

TEXINFO_TEX = ../texinfo.tex

lang = es
langsdir = /es

maxima_TEXINFOS = Affine.es.texi Arrays.es.texi Atensor.es.texi augmented_lagrangian.texi \
bernstein.texi bode.texi Bugs.es.texi cobyla.texi Command.es.texi Constants.es.texi contrib_ode.texi \
Ctensor.es.texi Database.es.texi DataTypes.es.texi Debugging.es.texi defstruct.texi descriptive.texi \
diag.texi Differential.es.texi Differentiation.es.texi distrib.texi drawdf.texi draw.texi dynamics.texi \
Elliptic.es.texi Equations.es.texi Evaluation.es.texi Expressions.es.texi ezunits.texi f90.texi finance.texi \
fractals.texi Function.es.texi ggf.texi graphs.texi grobner.texi Groups.es.texi Help.es.texi impdiff.texi \
Indices.es.texi Input.es.texi Integration.es.texi interpol.texi Introduction.es.texi Itensor.es.texi \
lapack.texi lbfgs.texi Limits.es.texi lindstedt.texi linearalgebra.texi Lists.es.texi lsquares.texi \
makeOrders.texi MathFunctions.es.texi Matrices.es.texi maxima_pdf.texi maxima.texi minpack.texi \
Miscellaneous.es.texi mnewton.texi nset.es.texi Number.es.texi Numerical.es.texi numericalio.texi \
Operators.es.texi opsubst.texi orthopoly.texi plotdf.texi Plotting.es.texi Polynomials.es.texi \
Program.es.texi romberg.texi Rules.es.texi Runtime.es.texi Series.es.texi simplex.texi Simplification.es.texi \
simplifications.texi solve_rec.texi Special.es.texi stats.texi stirling.texi stringproc.texi \
Symmetries.es.texi to_poly_solve.texi unit.texi zeilberger.texi

include ../common-lang.mk
EXTRA_DIST += txi-es_ES.tex include-maxima.texi.in
