MAKEINFOFLAGS = --enable-encoding -I . -I .. -I ../.. $(srcdir)/..

TEXINFO_TEX = ../texinfo.tex

lang = pt_BR
langsdir = /pt_BR

maxima_TEXINFOS = Affine.texi Arrays.texi Atensor.texi \
augmented_lagrangian.texi bode.texi Bugs.texi Command.texi Constants.texi \
Contexts.texi contrib_ode.texi Ctensor.texi Debugging.texi descriptive.texi \
diag.texi Differential.texi Differentiation.texi distrib.texi draw.texi \
dynamics.texi Elliptic.texi Equations.texi eval_string.texi Expressions.texi \
f90.texi Floating.texi Function.texi ggf.texi grobner.texi Groups.texi \
Help.texi impdiff.texi implicit_plot.texi Indices.texi Input.texi \
Integration.texi interpol.texi Introduction.texi Itensor.texi lbfgs.texi \
Limits.texi lindstedt.texi linearalgebra.texi Lists.texi Logarithms.texi \
lsquares.texi makeOrders.texi Matrices.texi maxima_pdf.texi maxima.texi \
Miscellaneous.texi mnewton.texi nset.texi Number.texi numericalio.texi \
Numerical.texi Operators.texi opsubst.texi orthopoly.texi plotdf.texi \
Plotting.texi Polynomials.texi Program.texi romberg.texi Rules.texi \
Runtime.texi Series.texi simplex.texi simplifications.texi \
Simplification.texi solve_rec.texi Special.texi stats.texi stirling.texi \
stringproc.texi Symmetries.texi Trigonometric.texi unit.texi zeilberger.texi

include ../common-lang.mk
EXTRA_DIST += include-maxima.texi.in

